[package]
edition = "2021"
name = "pico-util"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
critical-section = { version = "1.2.0" }
defmt = "0.3"
defmt-rtt = "0.4.0"
# embedded-alloc = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.5", features = [
  "unproven",
] }
fugit = "0.3.6"
futures = { version = "0.3.30", default-features = false, features = [
  "async-await",
] }

heapless = { version = "0.8.0", features = ["ufmt", "defmt-03"] }
# pio = "0.2.0"
# pio-proc = "0.2.0"
rp235x-hal = { version = "0.3.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  "defmt",
] }
sh1106 = { version = "0.5.0" }
embedded-graphics = "0.8.1"
embassy-executor = { version = "0.5", features = [
  "arch-cortex-m",
  "executor-thread",
] }

# nb = "1.0"
# panic-halt = "0.2"
# panic-itm = "0.4"

# [dev-dependencies]
nb = "1.0"
# panic-halt = "0.2"
# panic-itm = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
ufmt = "0.2.0"


[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
